updated issuer template endpoint structure
