# src/api/index.js
@@ -7,6 +7,7 @@ import revocation from "./revocation";
 import auth from './auth';
 import apiInfo from '../resources/apiInfo';
 import credentials from "./credentials";
+import issuerTemplates from "./issuerTemplates";
 
 
 export default ({config}) => {
@@ -14,6 +15,9 @@ export default ({config}) => {
 
     // mount the issuer resource
     api.use('/issue', passport.authenticate('bearer', {session: false}), issuer({config}));
+
+    // mount the issue-templates resource
+    api.use('/issue-templates', passport.authenticate('bearer', {session: false}), issuerTemplates({config}));
 
     // mount the verifier resource
     api.use('/verify', verifier({config}));
